syntax = "proto3";

package cloud.deps.api.v1alpha.extractor;

import "v1alpha/deps/deps.proto";

import "github.com/grpc-ecosystem/grpc-gateway/third_party/googleapis/google/api/annotations.proto";

option go_package = "extractor";

message ExtractRequest {
    string separator = 1;
    map<string, string> fileContents = 2;
    string url = 3;
}

message ExtractResponse {
    repeated cloud.deps.api.v1alpha.deps.DependencyManagementFile managementFiles = 1;
}

message MatchRequest {
    string separator = 1;
    repeated string paths = 2;
}

message MatchResponse {
    repeated string matchedPaths = 1;
}

service DependencyExtractor {
    rpc Match(MatchRequest) returns (MatchResponse) {
        option (google.api.http) = {
            post: "/v1alpha/dependencies/match"
            body: "*"
        };
    }

    rpc Extract(ExtractRequest) returns (ExtractResponse) {
        option (google.api.http) = {
            post: "/v1alpha/dependencies/extract"
            body: "*"
        };
    }
}
